@@ -222,6 +222,7 @@ Behavior   : Clericness\n\r\
 Targets    : MOBs\n\r\
 Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS) (NOCOMBATSTAT)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
+Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
 Example    : \n\r\
 Example    : Templar\n\r\
 Example    : Doomsayer OFFENSIVE\n\r\
@@ -452,6 +453,7 @@ Behavior   : Fighterness\n\r\
 Targets    : MOBs\n\r\
 Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS) (NOCOMBATSTAT)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
+Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
 Example    : Fighter\n\r\
 Example    : Paladin\n\r\
 Description: \n\r\
@@ -473,6 +475,7 @@ Behavior   : Druidness\n\r\
 Targets    : MOBs\n\r\
 Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS) (NOCOMBATSTAT)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
+Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
 Example    : \n\r\
 Example    : Druid\n\r\
 Example    : SkyWatcher DEFENSIVE\n\r\
@@ -495,6 +498,7 @@ Behavior   : Bardness\n\r\
 Targets    : MOBs\n\r\
 Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS) (NOCOMBATSTAT)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
+Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
 Example    : \n\r\
 Example    : Bard\n\r\
 Example    : Dancer MIXEDOFFENSIVE\n\r\
@@ -794,6 +798,7 @@ Behavior   : Mageness\n\r\
 Targets    : MOBs\n\r\
 Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS) (NOCOMBATSTAT)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
+Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
 Example    : \n\r\
 Example    : Mage\n\r\
 Example    : Illusionist MIXEDDEFENSIVE\n\r\
@@ -2131,6 +2136,7 @@ Behavior   : Thiefness\n\r\
 Targets    : MOBs\n\r\
 Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS) (NOCOMBATSTAT)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
+Parameters : (MINTICKS=[NUM] MAXTICKS=[NUM] CHANCE=[NUM])\n\r\
 Example    : \n\r\
 Example    : Thief\n\r\
 Example    : Assassin MIXEDOFFENSIVE\n\r\
